<resources>
  <string name="google_ad_id" translatable="false">ca-app-pub-3397707615957622~6782587159</string>
  <string name="facebook_app_id" translatable="false">103931556876</string>
  <string name="fb_login_protocol_scheme" translatable="false">fb103931556876</string>
  <string name="chormecast_app_id" translatable="false">EECB0A51</string>
  <string name="default_web_client_id" translatable="false">102086738647-25pcu0n66bs9l8qeb4s7f8ugign2u8et.apps.googleusercontent.com</string>
  <string name="_add_the_following_to_the_allowed_callers_listn"></string>
  <string name="_but_its_package_doesnt_match_any_expected_package_for_the"></string>
  <string-array name="Gender">
    <item>Male</item>
    <item>Female</item>
    <item>Prefer not to say</item>
  </string-array>
  <string-array name="State">
    <item>Andhra Pradesh</item>
    <item>Arunachal Pradesh</item>
    <item>Assam</item>
    <item>Bihar</item>
    <item>Chhattisgarh</item>
    <item>Goa</item>
    <item>Gujarat</item>
    <item>Haryana</item>
    <item>Himachal Pradesh</item>
    <item>Jharkhand</item>
    <item>Karnataka</item>
    <item>Kerala</item>
    <item>Madhya Pradesh</item>
    <item>Maharashtra</item>
    <item>Manipur</item>
    <item>Meghalaya</item>
    <item>Mizoram</item>
    <item>Nagaland</item>
    <item>Odisha</item>
    <item>Punjab</item>
    <item>Rajasthan</item>
    <item>Sikkim</item>
    <item>Tamil Nadu</item>
    <item>Telangana</item>
    <item>Tripura</item>
    <item>Uttar Pradesh</item>
    <item>Uttarakhand</item>
    <item>West Bengal</item>
    <item>Andaman and Nicobar Islands</item>
    <item>Chandigarh</item>
    <item>Dadra and Nagar Haveli and Daman and Diu</item>
    <item>Delhi</item>
    <item>Jammu and Kashmir</item>
    <item>Ladakh</item>
    <item>Lakshadweep</item>
    <item>Puducherry</item>
  </string-array>
  <string name="string_name">String text</string>
  <string name="_150">150</string>
  <string name="_doller">\u0024</string>
  <string name="_rupee">\u20B9</string>
  <string name="action_favorite_name">Toggle Favorite</string>
  <string name="active_till">Active till</string>
  <string name="ad_attribution">Ad</string>
  <string name="album_str_1">Similar Albums</string>
  <string name="album_str_2">Albums</string>
  <string name="album_str_3">Favourite album</string>
  <string name="album_str_4">Added to favourited album</string>
  <string name="allowed_caller_log"></string>
  <string name="app_id">C0868879</string>
  <string name="app_name">Hungama</string>
  <string name="app_name_gold">Hungama_Gold</string>
  <string name="artist_str_1">Latest News</string>
  <string name="artist_str_10">TV Shows</string>
  <string name="artist_str_11">Upcoming Live Performance</string>
  <string name="artist_str_12">Merchandise</string>
  <string name="artist_str_13">You May Also Like</string>
  <string name="artist_str_14">Movies</string>
  <string name="artist_str_15">Songs</string>
  <string name="artist_str_17">Yay, you\'re following artist</string>
  <string name="artist_str_18">Unfollow</string>
  <string name="artist_str_19">Ok, you\'ve stopped following artist</string>
  <string name="artist_str_2">Play All</string>
  <string name="artist_str_3">Follow</string>
  <string name="artist_str_4">Plays</string>
  <string name="artist_str_5">Followers</string>
  <string name="artist_str_6">Artist for You</string>
  <string name="artist_str_7">About</string>
  <string name="artist_str_8">Top Songs</string>
  <string name="artist_str_9">Music Videos</string>
  <string name="at">at</string>
  <string name="auto_repeat_current_song">Auto-repeat current song</string>
  <string name="by_bollywood_hungama">by Bollywood hungama</string>
  <string name="cast_screen">Cast screen</string>
  <string name="chart_str_1">By Hungama</string>
  <string name="chart_str_2">Play All</string>
  <string name="chart_str_3">More Top 100 Charts</string>
  <string name="chart_str_4">Recommended Charts</string>
  <string name="chart_str_5">10,25,695 Plays • 100 Songs</string>
  <string name="chart_str_6">By Dj Smith</string>
  <string name="chart_str_7">Top 100 Punjabi Hits</string>
  <string name="chart_str_8">Playlist by Hungama</string>
  <string name="collection_str_1">T-Series Albums</string>
  <string name="collection_str_2">Movies</string>
  <string name="collection_str_3">People Also Watched</string>
  <string name="collection_str_4">Trailers &amp; Extras</string>
  <string name="collection_str_5">Cast &amp; Crew</string>
  <string name="comming_soon">Coming soon</string>
  <string name="congratulations">Congratulations</string>
  <string-array name="crossfadeValues">
    <item></item>
    <item>12</item>
  </string-array>
  <string name="default_notification_channel_id">com.hungama.music</string>
  <string name="discover_str_1">Hungama</string>
  <string name="discover_str_10">Device Language</string>
  <string name="discover_str_11">User Country:</string>
  <string name="discover_str_12">User Carrier</string>
  <string name="discover_str_13">ok</string>
  <string name="discover_str_14">Coming Soon</string>
  <string name="discover_str_15">Search</string>
  <string name="discover_str_16">Rent</string>
  <string name="discover_str_17">No data available</string>
  <string name="discover_str_18">Click here to refresh</string>
  <string name="discover_str_19">Good Afternoon</string>
  <string name="discover_str_2">Something is wrong! Please try again later</string>
  <string name="discover_str_20">Good Evening</string>
  <string name="discover_str_21">Good Night</string>
  <string name="discover_str_22">Good Morning</string>
  <string name="discover_str_23">Listening</string>
  <string name="discover_str_24">Plays</string>
  <string name="discover_str_25">Views</string>
  <string name="discover_str_26">To exit, click back once more</string>
  <string name="discover_str_29">Love Us?</string>
  <string name="discover_str_3">No internet connection</string>
  <string name="discover_str_30">How likely are you to tell your friends about Hungama?</string>
  <string name="discover_str_31">Language Preference</string>
  <string name="discover_str_32">Radio One sdf df ds sdsdf sd df dsf</string>
  <string name="discover_str_33">1</string>
  <string name="discover_str_4">No internet connection available</string>
  <string name="discover_str_5">Discover</string>
  <string name="discover_str_5_en">Discover</string>
  <string name="discover_str_6">Music</string>
  <string name="discover_str_6_en">Music</string>
  <string name="discover_str_7">Videos</string>
  <string name="discover_str_7_en">Videos</string>
  <string name="discover_str_8">Search</string>
  <string name="discover_str_8_en">Search</string>
  <string name="discover_str_9">Library</string>
  <string name="discover_str_9_en">Library</string>
  <string name="discover_title">Discover</string>
  <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
  <string name="download_eta_min">%1$dm %2$ds left</string>
  <string name="download_eta_sec">%1$ds left</string>
  <string name="download_speed_bytes">%1$d bps</string>
  <string name="download_speed_kb">%1$s Kbps</string>
  <string name="download_speed_mb">%1$s Mbps</string>
  <string name="download_str_1">Retry</string>
  <string name="download_str_10">Downloaded Podcast Episodes</string>
  <string name="download_str_11">In Queue</string>
  <string name="download_str_12">You can pause download anytime</string>
  <string name="download_str_13">Are you sure you want to resume all downloads?
</string>
  <string name="download_str_14">You won’t be able to listen offline</string>
  <string name="download_str_15">Download Awaited</string>
  <string name="download_str_16">Download Paused</string>
  <string name="download_str_17">Oops! The Download Failed.</string>
  <string name="download_str_18">Movies</string>
  <string name="download_str_19">TV Shows</string>
  <string name="download_str_2">Downloading</string>
  <string name="download_str_20">Download Now</string>
  <string name="download_str_21">Tap the \t icon to download videos and watch later</string>
  <string name="download_str_22">Download and Watch offline</string>
  <string name="download_str_23">Search</string>
  <string name="download_str_24">No Song Downloading</string>
  <string name="download_str_25">Movies Downloads</string>
  <string name="download_str_26">TV Show Episodes</string>
  <string name="download_str_3">Cancel</string>
  <string name="download_str_4">Pause All</string>
  <string name="download_str_5">Resume All</string>
  <string name="download_str_6">Are you sure you want to cancel all downloads?</string>
  <string name="download_str_7">Are you sure you want to pause all downloads?</string>
  <string name="download_str_8">You can resume download anytime</string>
  <string name="download_str_9">Continue</string>
  <string name="earn_coin_how_to_use">Hungama Rewards does not offer returns for physical/digital products after the order has been placed on the Hungama Rewards Ecommerce Site

Unless otherwise specified</string>
  <string name="episode">Episode</string>
  <string name="error_media_not_found">Could not locate requested media</string>
  <string name="favorites">Favorites</string>
  <string name="favrited_str_1">Favorited Songs</string>
  <string name="general_setting_str_1">Notification</string>
  <string name="general_setting_str_10">Set Hungama as default music service</string>
  <string name="general_setting_str_11">Set Hungama as your default music player on Alexa and take control  through voice command by saying, \"Alexa, play music on Hungama\".</string>
  <string name="general_setting_str_12">Some examples of what you can ask Alexa:</string>
  <string name="general_setting_str_13">“Alexa, play music on Hungama”</string>
  <string name="general_setting_str_14">“Alexa, play love songs by Arijit Singh on Hungama”</string>
  <string name="general_setting_str_15">“Alexa, play music videos on Hungama”</string>
  <string name="general_setting_str_16">Manage My Hungama Gold</string>
  <string name="general_setting_str_17">Streaming Quality</string>
  <string name="general_setting_str_18">Download on Mobile Data</string>
  <string name="general_setting_str_19">Recommended Setting:Off</string>
  <string name="library_playlist_str_5">Create a playlist</string>
  <string name="library_playlist_str_6">Name your playlist</string>
  <string name="library_playlist_str_7">Let others discover your playlist</string>
  <string name="login_str_2">Hungama</string>
  <string name="media_route_menu_title">Cast</string>
  <string name="other_str_1">Don\'t Know</string>
  <string name="other_str_2">Submit</string>
  <string name="other_str_3">No</string>
  <string name="other_str_4">Yes</string>
  <string name="playlist_str_3">Playlist Name</string>
  <string name="popup_str_11">Delete from Downloads?</string>
  <string name="popup_str_20">Not Now</string>
  <string name="popup_str_44">This content is explicit</string>
  <string name="popup_str_46">Go to Settings</string>
  <string name="popup_str_5">Delete</string>
  <string name="popup_str_56">Create</string>
  <string name="popup_str_60">To play this content, enable explicit content in settings tab</string>
  <string name="popup_str_75">Cancel</string>
  <string name="popup_str_90">you won\'t be able to watch this video offline.</string>
  <string name="search_str_22">No results found</string>
  <string name="search_str_23">Try Again</string>
  <string name="search_str_24">Try different keyword</string>
  <string name="video_player_str_1">Download</string>
  <string name="video_player_str_11">Enable playing speed</string>
  <string name="video_player_str_13">Enable Equalizer</string>
  <string name="video_player_str_3">Enable next/previous</string>
  <string name="video_player_str_5">Enable forward/backward</string>
  <string name="video_player_str_7">Enable shuffle</string>
  <string name="video_player_str_9">Enable repeat</string>
</resources>