<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.hungama.music.utils.customview.blurview.CustomShapeBlurView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:topLeftRadius="@dimen/common_popup_round_corner"
        app:topRightRadius="@dimen/common_popup_round_corner"
        app:realtimeBlurRadius="150dp"
        app:realtimeOverlayColor="@color/colorTransparentBlack"/>
    <View
        android:id="@+id/vDevider"
        android:layout_width="@dimen/dimen_42"
        android:layout_height="@dimen/dimen_4"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@drawable/bottomsheet_icon_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_playlist_str_5"
        android:textColor="#ffffff"
        android:textSize="@dimen/font_17"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginStart="@dimen/dimen_27"
        app:layout_constraintTop_toBottomOf="@+id/vDevider"
        app:layout_constraintStart_toStartOf="parent"
        android:includeFontPadding="false"
       />
    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_playlist_str_6"
        android:textSize="@dimen/font_13"
        android:textColor="#c6c6c6"
        android:alpha="0.7"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/etCreatePlaylist"
        android:layout_width="match_parent"
        style="@style/StyleEditTextView"
        android:hint="@string/playlist_str_3"
        android:textColorHint="@color/colorHint"
        android:textColor="#ffffff"
        android:backgroundTint="#4D707070"
        android:textSize="@dimen/font_18"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_27"
        android:maxLength="100"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/dimen_27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"/>

    <Switch
        android:id="@+id/switchicon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_20"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="start|center"
        android:layout_marginTop="@dimen/dimen_30"
        android:contentDescription="@string/login_str_2"
        android:switchMinWidth="@dimen/dimen_30"
        android:checked="true"
        android:layout_marginEnd="@dimen/dimen_27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCreatePlaylist"
        android:thumb="@drawable/drawable_switch_thumb"
        android:track="@drawable/drawable_switch_track"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvSwitchInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_27"
        android:layout_marginEnd="@dimen/dimen_2"
        android:maxLines="2"
        android:text="@string/library_playlist_str_7"
        android:textColor="@color/item_sub_title_color"
        android:textSize="@dimen/font_13"
        app:layout_constraintBottom_toBottomOf="@+id/switchicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchicon"
        app:layout_constraintEnd_toStartOf="@+id/switchicon"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/vBtnCreate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginTop="@dimen/dimen_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchicon"
        android:layout_marginStart="@dimen/dimen_27"
        android:layout_marginEnd="@dimen/dimen_27"
        android:background="@drawable/corner_radius_18_bg_alpha_white_without_border"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hungama.music.utils.customview.fontview.FontAwesomeImageView
            style="@style/commonMediumIconStyle"
            app:fontText="@string/icon_create_playlist"/>

        <TextView
            style="@style/commonMediumButtonStyle"
            android:includeFontPadding="false"
            android:text="@string/popup_str_56" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        layout="@layout/layout_progress"
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>