<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space_between_title_and_artwork_space_listing_page"
        android:layout_marginEnd="@dimen/dimen_20"
        android:background="@drawable/bg_search_bucket">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/dimen_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            app:tint="#aaa7a7" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:textStyle="normal"
            android:textSize="@dimen/font_17"
            android:textColor="@color/colorWhite"
            tools:text="@string/artist_str_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:includeFontPadding="false"/>

        <Button
            android:id="@+id/btnYes"
            style="@style/StyleButtonView"
            android:layout_width="@dimen/dimen_97"
            android:layout_height="@dimen/dimen_31"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_26"
            android:background="@drawable/corner_radius_18_bg_blue"
            android:text="@string/other_str_4"
            android:fontFamily="@font/sf_pro_text"
            android:textStyle="normal"
            android:textSize="@dimen/font_15"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/dimen_16"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toStartOf="@+id/btnNo"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnNo"
            style="@style/StyleButtonView"
            android:layout_width="@dimen/dimen_97"
            android:layout_height="@dimen/dimen_31"
            android:background="@drawable/corner_radius_18_bg_alpha_white"
            android:text="@string/other_str_3"
            android:fontFamily="@font/sf_pro_text"
            android:textStyle="normal"
            android:textSize="@dimen/font_15"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_26"
            android:layout_marginEnd="@dimen/dimen_16"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnYes"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>