<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="@dimen/dimen_204"
        android:layout_height="@dimen/dimen_135"
        android:background="@drawable/drawable_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_str_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSearch"
        android:layout_marginTop="@dimen/dimen_28"
        android:textSize="@dimen/dimen_21"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_str_24"
        android:textColor="@color/item_sub_title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginTop="@dimen/dimen_6"
        android:textSize="@dimen/font_13"
        android:lineHeight="@dimen/font_20"
        android:lineSpacingExtra="@dimen/font_7"
        />
    <Button
        android:id="@+id/btnTry"
        android:layout_width="@dimen/dimen_164"
        android:layout_height="@dimen/dimen_42"
        android:background="@drawable/btn_create_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
        android:layout_marginTop="@dimen/dimen_19"
        android:text="@string/search_str_23"
        android:textSize="@dimen/font_16"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/sf_pro_text_medium"
        android:textAlignment="center"
        android:textAllCaps="false"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>