<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxHeight="@dimen/dimen_275">
    <com.hungama.music.utils.customview.blurview.CustomShapeBlurView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:realtimeBlurRadius="150dp"
        app:topLeftRadius="@dimen/common_popup_round_corner"
        app:topRightRadius="@dimen/common_popup_round_corner"
        app:realtimeOverlayColor="@color/colorTransparentBlack"/>
    <View
        android:id="@+id/vDevider1"
        android:layout_width="@dimen/dimen_42"
        android:layout_height="@dimen/dimen_4"
        android:background="@drawable/bottomsheet_icon_background"
        android:layout_marginTop="@dimen/dimen_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28"
        android:text="@string/popup_str_44"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_21"
        android:fontFamily="@font/sf_pro_text_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vDevider1" />

    <TextView
        android:id="@+id/TvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center_horizontal"
        android:text="@string/popup_str_60"
        android:textColor="@color/item_sub_title_color"
        android:textSize="@dimen/font_15"
        android:fontFamily="@font/sf_pro_text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llGoToSetting"
        android:layout_width="@dimen/dimen_185"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginTop="@dimen/dimen_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvSubTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/corner_radius_18_bg_blue">
        <com.hungama.music.utils.customview.fontview.FontAwesomeImageView
            style="@style/commonMediumIconStyle"
            app:fontText="@string/icon_settings"/>
        <TextView
            style="@style/commonMediumButtonStyle"
            android:text="@string/popup_str_46" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvNotNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        app:layout_constraintTop_toBottomOf="@+id/llGoToSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/sf_pro_text"
        android:textStyle="normal"
        android:textSize="@dimen/font_16"
        android:textColor="@color/colorWhite"
        android:text="@string/popup_str_20"/>

</androidx.constraintlayout.widget.ConstraintLayout>